--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <akka.version>2.3.9</akka.version>
         <lombok.version>1.16.2</lombok.version>
+        <json.version>2.3.1</json.version>
     </properties>
 
     <dependencies>
@@ -26,5 +27,12 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
     </dependencies>
 </project>
